# serializer version: 1
# name: test_entities[switch][switch.peblar_ev_charger_charge-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.peblar_ev_charger_charge',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Charge',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Charge',
    'platform': 'peblar',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'charge',
    'unique_id': '23-45-A4O-MOF_charge',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[switch][switch.peblar_ev_charger_charge-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Peblar EV Charger Charge',
    }),
    'context': <ANY>,
    'entity_id': 'switch.peblar_ev_charger_charge',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_entities[switch][switch.peblar_ev_charger_force_single_phase-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.peblar_ev_charger_force_single_phase',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Force single phase',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Force single phase',
    'platform': 'peblar',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'force_single_phase',
    'unique_id': '23-45-A4O-MOF_force_single_phase',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[switch][switch.peblar_ev_charger_force_single_phase-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Peblar EV Charger Force single phase',
    }),
    'context': <ANY>,
    'entity_id': 'switch.peblar_ev_charger_force_single_phase',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_entities[switch][switch.peblar_ev_charger_keep_socket_locked-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'switch.peblar_ev_charger_keep_socket_locked',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Keep socket locked',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Keep socket locked',
    'platform': 'peblar',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'socket_lock',
    'unique_id': '23-45-A4O-MOF_socket_lock',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[switch][switch.peblar_ev_charger_keep_socket_locked-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Peblar EV Charger Keep socket locked',
    }),
    'context': <ANY>,
    'entity_id': 'switch.peblar_ev_charger_keep_socket_locked',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
